--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,33 +2,53 @@
 
 {% block title %}Inscription{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('styles/register.css') }}">
+{% endblock %}
+
 {% block body %}
-    <h1>Inscription</h1>
+    <div class="register-container">
+        <h1>Inscription</h1>
 
-    {# Afficher les erreurs du formulaire si elles existent #}
-    {{ form_errors(registrationForm) }}
+        {# Affichage des erreurs globales du formulaire si elles existent #}
+        {% if form_errors(registrationForm) %}
+            <div class="form-errors">
+                {{ form_errors(registrationForm) }}
+            </div>
+        {% endif %}
 
-    {# Démarrer le formulaire #}
-    {{ form_start(registrationForm) }}
-        
-        {# Champ email #}
-        {{ form_row(registrationForm.email, {
-            'label': 'Adresse email'
-        }) }}
-        
-        {# Champ mot de passe #}
-        {{ form_row(registrationForm.plainPassword, {
-            'label': 'Mot de passe'
-        }) }}
-        
-        {# Case à cocher pour accepter les termes #}
-        {{ form_row(registrationForm.agreeTerms, {
-            'label': 'J\'accepte les termes et conditions'
-        }) }}
+        {# Démarrage du formulaire #}
+        {{ form_start(registrationForm, { 'attr': { 'class': 'register-form' } }) }}
 
-        {# Bouton de soumission #}
-        <button type="submit" class="btn">S\'inscrire</button>
-        
-    {{ form_end(registrationForm) }}
+        <div class="form-group">
+            {# Champ email #}
+            {{ form_row(registrationForm.email, {
+                'label': 'Adresse email',
+                'attr': { 'class': 'form-control', 'placeholder': 'Votre adresse email' }
+            }) }}
+        </div>
 
+        <div class="form-group">
+            {# Champ mot de passe #}
+            {{ form_row(registrationForm.plainPassword, {
+                'label': 'Mot de passe',
+                'attr': { 'class': 'form-control', 'placeholder': 'Votre mot de passe' }
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {# Case à cocher pour accepter les termes #}
+            {{ form_row(registrationForm.agreeTerms, {
+                'label': 'J\'accepte les termes et conditions',
+                'attr': { 'class': 'form-check-input' }
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {# Bouton de soumission #}
+            <button type="submit" class="btn btn-primary">S'inscrire</button>
+        </div>
+
+        {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
