--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,36 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Connexion{% endblock %}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('styles/login.css') }}"
+{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <h1 class="h3 mb-3 font-weight-normal text-center">Se connecter</h1>
+    <div class="container login-container">
+        <h1 class="login-title">Se connecter</h1>
 
         {% if error %}
-            <div class="alert alert-danger">
+            <div class="alert error-alert">
                 {{ error.messageKey|trans(error.messageData, 'security') }}
             </div>
         {% endif %}
 
         {% if app.user %}
-            <div class="mb-3">
+            <div class="user-info">
                 Vous êtes connecté en tant que {{ app.user.userIdentifier }}. 
-                <a href="{{ path('app_logout') }}">Déconnexion</a>
+                <a href="{{ path('app_logout') }}" class="logout-link">Déconnexion</a>
             </div>
         {% endif %}
 
-        <form action="{{ path('app_login') }}" method="post">
+        <form action="{{ path('app_login') }}" method="post" class="login-form">
             <div class="form-group">
-                <label for="email">Adresse email</label>
+                <label for="email" class="form-label">Adresse email</label>
                 <input type="text" id="email" class="form-control" name="_username" value="{{ last_username }}" required autofocus placeholder="Entrez votre email">
             </div>
 
             <div class="form-group">
-                <label for="password">Mot de passe</label>
+                <label for="password" class="form-label">Mot de passe</label>
                 <input type="password" id="password" class="form-control" name="_password" required placeholder="Entrez votre mot de passe">
             </div>
 
-            <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
+            <button type="submit" class="btn-login">Se connecter</button>
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         </form>
